PostGIS 3.5.5
xxxx/xx/xx

To take advantage of all postgis_sfcgal extension features SFCGAL 1.5+ is needed.
PostgreSQL 12-18 required. GEOS 3.8+ required. Proj 6.1+ required.

* Bug fixes *




PostGIS 3.5.4
2025/10/16

To take advantage of all postgis_sfcgal extension features SFCGAL 1.5+ is needed.
PostgreSQL 12-18 required. GEOS 3.8+ required. Proj 6.1+ required.

* Bug fixes *

  - #5977, Fix downgrade protection with standard conforming strings off (Sandro Santilli)
  - #5951, Fix crash in ST_GetFaceEdges with corrupted topology (Sandro Santilli)
  - #5947, [topology] Fix crash in ST_ModEdgeHeal (Sandro Santilli)
  - #5925, #5946, [topology] Have GetFaceContainingPoint survive EMPTY edges (Sandro Santilli)
  - #5936, [topology] Do script-based upgrade in a single transaction (Sandro Santilli)
  - #5908, [topology] Fix crash in GetFaceContainingPoint (Sandro Santilli)
  - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
  - #5922, [topology] Fix crash in TopoGeo_AddLinestring with EMPTY input (Sandro Santilli)
  - #5921, Crash freeing uninitialized pointer (Arsenii Mukhin)
  - #5912, Crash on GML with xlink and no prefix (Paul Ramsey)
  - #5905, Crash on deeply nested geometries (Paul Ramsey)
  - #5909, ST_ValueCount crashes on empty table (Paul Ramsey)
  - #5917, ST_Relate becomes unresponsive (Paul Ramsey)
  - #5923, CG_ExtrudeStraightSkeleton crashes on empty polygon (Loïc Bartoletti)
  - #5935, Require GDAL 2.4 for postgis_raster
           and switch to GDALGetDataTypeSizeBytes (Laurențiu Nicola)
  - GT-257, fix issue with xsltproc with path has spaces (Laurențiu Nicola)
  - #5938, incorrect parameter order in ST_Relate caching (Paul Ramsey)
  - #5927, ST_IsCollection throwing exception (Paul Ramsey)
  - #5902, ST_PointFromText cannot create geometries with M (Paul Ramsey)
  - #5943, Memory leak in handling GEOS GeometryFactory (Megan Ma)
  - #5407, Use memset in place of bzero (Paul Ramsey)